# Multi-Modal-RAG-system

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.ui  LICENSE  Makefile  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
data/docs/: company_overview.md  product_line.txt  sustainability.html
data/tables/: installations.parquet  products.csv  revenue_by_quarter.csv
docs/: eval_report.md
notebooks/: exploratory_indexing.ipynb
src/app/: deps.py  main.py  schemas.py  settings.py
src/evaluation/: datasets.py  metrics.py  run_ragas.py
src/generation/: cite_guard.py  generator.py  prompt.py
src/ingestion/: indexer.py  loaders.py  preprocess.py
src/retrieval/: bm25.py  embeddings.py  hybrid.py  rerank.py  tables.py
src/utils/: io.py  logging.py  timer.py
tests/: conftest.py  test_citations.py  test_generation.py  test_ingestion.py  test_retrieval.py
ui/: app.py  components.py
